# customer-data

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt  test_no_date.py  verify_bossier_output.py
arcgis_rest_pull/: __main__.py  checkpoint.py  extract.py  load.py  transform.py
customer_data/: __main__.py  config.py  extract.py  load.py  transform.py  utils.py
customer_data/etl/: base.py  bossier.py  tulsa_ok.py  wayne_ky.py
docs/: bossier_la.md  tulsa_ok.md  wayne_ky.md
jurisdictions/: bossier.yaml  bossier_la.yaml  template.yaml  tulsa.yaml  wayne_ky.yaml
jurisdictions/la/bossier/: bossier.yaml
tests/: test_no_date.py
