[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "customer-data"
version = "0.1.0"
description = "Extract data from various county assessor APIs to PostGIS and GeoPackage"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "PyYAML",
    "geopandas",
    "psycopg2-binary"
]

[project.scripts]
customer-data = "customer_data.__main__:main" 